Cabal/tests/ParserTests/errors/forward-compat.cabal
cabal-version: 99999.9
name: future
============
Lexically completely changed future
